@@ -4,27 +4,17 @@ import core.Chuu;
 
 import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.BlockingQueue;
-import java.util.concurrent.ThreadPoolExecutor;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicInteger;
 
 public class ScrobbleEventManager {
     private static final BlockingQueue<ScrobbleStatus> queue = new ArrayBlockingQueue<>(100);
-    private static final int CONSUMER_COUNT = 3;
     private static final AtomicBoolean doLoop = new AtomicBoolean(true);
     private final StatusProcesser processer;
 
     public ScrobbleEventManager(StatusProcesser statusProcesser) {
         processer = statusProcesser;
-        AtomicInteger ranker = new AtomicInteger();
-        ThreadPoolExecutor manager = new ThreadPoolExecutor(CONSUMER_COUNT, CONSUMER_COUNT, 0, TimeUnit.SECONDS, new ArrayBlockingQueue<>(CONSUMER_COUNT),
-                r -> new Thread(r, "Scrobble-executor-" + ranker.getAndIncrement()),
-                (r, executor) -> Chuu.getLogger().warn("TRYING TO CREATE MORE THAN {} THREADS ON SCROBBLE LOOP", CONSUMER_COUNT)
-        );
-        for (int i = 0; i < CONSUMER_COUNT; i++) {
-            manager.submit(new ScrobbleLoop());
-        }
+        Thread.ofVirtual().name("Scrobble Manager").start(new ScrobbleLoop());
     }
 
     public void submitEvent(ScrobbleStatus status) {
@@ -32,13 +22,23 @@ public class ScrobbleEventManager {
     }
 
     private final class ScrobbleLoop implements Runnable {
+        private final ThreadFactory tf = Thread.ofVirtual().name("ScrobbleProcessor", 0).factory();
 
         @Override
         public void run() {
+
             while (doLoop.get()) {
                 try {
-                    processer.process(queue.take());
-                } catch (Exception e) {
+                    ScrobbleStatus take = queue.take();
+                    tf.newThread(() -> {
+                                try {
+                                    processer.process(take);
+                                } catch (Exception e) {
+                                    throw new RuntimeException(e);
+                                }
+                            })
+                            .start();
+                } catch (InterruptedException e) {
                     Chuu.getLogger().info("Thread interrupted");
                     Chuu.getLogger().info(e.getMessage(), e);
                 }
